I am not sure which part this is. But git

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -14,8 +14,8 @@
     </div>
 
     <div class="image-block">
-      <!--img src="../assets/James-Chege-Cloud Engineer.jpg" alt="James Chege Photo" /-->
-      <img src="../assets/wift/goals7.jpg" alt="test two photp">
+      <img src="../assets/James-Chege-Cloud Engineer.jpg" alt="James Chege Photo" />
+      <img src="../assets/James-Chege-Cloud Engineer.jpg" alt="test two" srcset="">
     </div>
   </div>
 </section>
