--- a/src/app/app.css
+++ b/src/app/app.css
@@ -120,7 +120,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../assets/cicd.png');
+  background-image: url('../assets/wift/goals8.jpg');
   background-size: cover;
   background-position: center;
   z-index: 1;
