--- a/src/app/app.css
+++ b/src/app/app.css
@@ -450,7 +450,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom right, rgba(0, 35, 102, 0.75), rgba(0, 85, 170, 0.65));
+  /**background: linear-gradient(to bottom right, rgba(0, 35, 102, 0.75), rgba(0, 85, 170, 0.65));
+  **/background: linear-gradient(to bottom right, rgba(0, 35, 102, 0.75), rgba(0, 85, 170, 0.65));
   backdrop-filter: blur(3px);
   z-index: 0;
 }
